[package]
name = "proute"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
quote = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }
